<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="title_activity_navigation">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_authenticators">Authenticators</string>
     <string name="title_settings">Settings</string>
    <string name="buttonText_enroll">Enroll</string>
    <string name="textViewText_enroll">Trigger mobile enrollment and scan your QR code.</string>
    <string name="buttonText_fetch">Fetch</string>
    <string name="textViewText_fetch">Check pending request.</string>
    <string name="buttonText_unenroll">Unenroll</string>

    <string name="buttonText_edit">Edit</string>
    <string name="buttonText_add">+</string>

    <string name="title_changepin">Change PIN</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_biometric_authenticator">Biometric Authenticator</string>
    <string name="title_pin_authenticator">PIN Authenticator</string>
    <string name="title_platform_local_authenticator">Platform Local Authenticator</string>
    <string name="title_platform_authenticator">Platform Authenticator</string>
    <string name="toolbar_title">Authenticators</string>
    <string name="alert_error_title">Error</string>
    <string name="alert_error_message_app_links">You are already enrolled. Please unenroll your application before clicking the new enrollment link.</string>

    <string name="usecase_enrollment">Enrollment</string>
    <string name="usecase_fetch">Fetch</string>
    <string name="usecase_changepin">Change Pin</string>
    <string name="usecase_addauthenticator">Add Authenticator</string>
    <string name="usecase_removeauthenticator">Remove Authenticator</string>
    <string name="usecase_process_notification">Process Notification</string>

    <string name="text_back_exit">Press Back again to exit</string>


    <!-- Enroll   -->
    <string name="enroll_alert_title">Enrollment</string>
    <string name="enroll_alert_message">You have been successfully enrolled.</string>

    <!-- Authenticate   -->
    <string name="fetch_alert_title">Fetch</string>
    <string name="fetch_alert_message">You have been successfully authenticated.</string>

    <!-- Change Pin  -->
    <string name="changepin_alert_title">Change PIN</string>
    <string name="changepin_alert_message">Your PIN has been updated.</string>

    <!-- Add Authenticator  -->
    <string name="addauthenticator_alert_title">Add Authenticator</string>
    <string name="addauthenticator_message">You have successfully added a new authenticator.</string>

    <!-- Remove Authenticator  -->
    <string name="removeauthenticator_alert_title">Remove Authenticator</string>
    <string name="removeauthenticator_alert_message">Your authenticator has been removed.</string>

    <!-- Unenroll  -->
    <string name="unenroll_alert_title">Unenroll</string>
    <string name="unenroll_alert_message">You have been unenrolled.</string>

    <!--Refresh PushToken -->
    <string name="refresh_push_alert_title">Refresh Push Token</string>
    <string name="refresh_push_success"> "You have successfully refreshed the device push token" </string>
    <string name="refresh_push_fail"> "Failed to refresh device push token" </string>
    <string name="enable_push_notification_from_setting_error"> Ensure that Push Notifications are enabled via the System Settings.</string>
    <string name="enable_push_noti_key">enable_push_noti</string>
    <!-- Progress -->
    <string name="progress_start">Executing</string>
    <string name="progress_sending_request">Sending request</string>
    <string name="progress_retrieving_request">Retrieving request</string>
    <string name="progress_processing_request">Processing request</string>
    <string name="progress_validating_authentication">Validating authentication</string>
    <string name="progress_end">Done</string>

    <!-- Share SecureLog -->
    <string name="secureLog_email_content">Hi Thales Fido team,\n\nThe Sample application is failing.\nPlease check more detail in the attached log file.\n\nRegards,</string>
    <string name="securelog_chooser_title">Select an Email application to send the Logs</string>


    <string name="sdk_version">Version</string>
    <string name="key_sdk_version">key_sdk_version</string>

    <!-- Refresh Push Notification Token Preferences -->
    <string name="push_notification">Push Notifications</string>
    <string name="key_refresh_push_token">key_refresh_token</string>
    <string name="device_push_token">Refresh Push Token</string>
    <string name="alert_push_noti_title"> "IdCloud FIDO" Would Like to Send You Notifications</string>
    <string name="alert_push_noti_message">Notifications may include alerts, sounds and icon badges. These can be configured in Settings</string>
    <string name="text_push_token_failure">Failed getting FCM push token</string>
    <string name="title_txn_details">Transaction Details</string>
    <string name="txn_detail_message">Please confirm the following operation:</string>
    <string name="btn_title_proceed">Proceed</string>
    <string name="sign_alert_message">Transfer <xliff:g id="amount">%s</xliff:g> from <xliff:g id="from">%s</xliff:g> To <xliff:g id="to">%s</xliff:g>.</string>
    <string name="sign_alert_date"><xliff:g id="date">%s</xliff:g></string>
    <string name="gcm_notification_channel_id">important</string>
    <string name="gcm_notification_channel_name">Authentication</string>
    <string name="gcm_notification_channel_description">Authentication triggered through push notification</string>

    <!-- Get Client ID -->
    <string name="category_others">Others</string>
    <string name="key_getClientId">key_getClientId</string>
    <string name="getClientId">Get Client ID</string>
    <string name="clientID">Client ID</string>
    
</resources>