<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button_authenticate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/buttonText_fetch"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/textView_authenticate"
        android:layout_width="328dp"
        android:layout_height="267dp"
        android:singleLine="false"
        android:textAlignment="center"
        android:text="@string/textViewText_fetch"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_authenticate"
        app:layout_constraintVertical_bias="0.087" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_authenticators"
        android:layout_width="378dp"
        android:layout_height="84dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/button_authenticate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button_unenroll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@null"
            android:text="@string/buttonText_unenroll"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="19dp" />

        <ImageButton
            android:id="@+id/imageButton_shareInAuthenticate"
            android:layout_width="83dp"
            android:layout_height="65dp"
            android:layout_gravity="end"
            android:background="@null"
            app:srcCompat="@android:drawable/ic_menu_share"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="19dp"/>

    </androidx.appcompat.widget.Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>