<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_authenticators"
        android:layout_width="405dp"
        android:layout_height="90dp"
        android:background="@null"
        app:layout_constraintBottom_toTopOf="@+id/listView_authenticatos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@null"
            android:text="@string/buttonText_add"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            tools:layout_editor_absoluteX="323dp"
            tools:layout_editor_absoluteY="19dp" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@null"
            android:text="@string/buttonText_edit"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="19dp" />

        <Button
            android:id="@+id/button_delete"
            android:layout_width="67dp"
            android:layout_height="66dp"
            android:background="@null"
            android:drawableStart="@android:drawable/ic_menu_delete"
            android:gravity="start"
            android:padding="16dp"
            android:textSize="22sp"
            android:drawableTint="@android:color/holo_red_dark"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="54dp" />

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/toolbar_title"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </androidx.appcompat.widget.Toolbar>

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/listView_authenticatos"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_authenticators" />

</androidx.constraintlayout.widget.ConstraintLayout>